--- a/src/components/components.css
+++ b/src/components/components.css
@@ -8,11 +8,12 @@
     justify-content: space-around;
     flex-wrap: nowrap;
     align-items: center;
+    background: #c798428f;
 }
 
 .header {
-    position: absolute;
-    top: 0;
+    /* position: absolute;
+    top: 0; */
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -20,4 +21,22 @@
     align-items: center;
     width: 100%;
     height: 10%;
+    background: #c798428f;
+}
+
+.header img {
+    object-fit: scale-down;
+    width: 50px;
+    height: auto;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.movie-container {
+    margin: 10px;
+    border: 2px black solid;
 }
