--- a/src/components/components.css
+++ b/src/components/components.css
@@ -8,7 +8,7 @@
     justify-content: space-around;
     flex-wrap: nowrap;
     align-items: center;
-    background: #c798428f;
+    background: #cce6ff;
 }
 
 .header {
@@ -21,7 +21,7 @@
     align-items: center;
     width: 100%;
     height: 10%;
-    background: #c798428f;
+    background: #cce6ff;
 }
 
 .header img {
